--- a/CatalogoWeb/Master.Master
+++ b/CatalogoWeb/Master.Master
@@ -42,8 +42,8 @@
 
 
                         <div class="d-flex p-2">
-                            <button class="btn btn-success" type="submit">Login</button>
-                            <button class="btn btn-toolbar" type="submit">Registrarse</button>
+                            <asp:Button class="btn btn-success" ID="btnLogin" OnClick="btnLogin_Click" Text="Login" runat="server" />
+                            <asp:Button class="btn btn-toolbar" ID="btnRegistrarse" OnClick="btnRegistrarse_Click" Text="Registrarse" runat="server" />
                         </div>
                     </div>
                 </div>
